# fastapi-advanced

./: .bumpversion.cfg  .gitignore  CYTHON_PERFORMANCE.md  LICENSE  MANIFEST.in  MEMORY_ANALYSIS.md  Makefile  PERFORMANCE.md  README.md  example.py  pyproject.toml  setup.py
benchmarks/: __init__.py  benchmark_memory.py  benchmark_speedups.py  locustfile.py
benchmarks/apps/: msgspec_app.py  pydantic_app.py
benchmarks/models/: msgspec_models.py  pydantic_models.py
benchmarks/profiling/: benchmark_cython_vs_python.py  benchmark_new_optimizations.py  comprehensive_performance_analysis.py  profile_serialization.py  profile_type_conversion.py
src/fastapi_advanced/: __init__.py  __init__.pyi  _speedups.pyx  _speedups_fallback.py  core.py  core.pyi  exceptions.py
tests/: test_performance.py
