[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel>=0.40.0",
    "cython>=3.0.0,<4.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-advanced"
version = "2.0.0"
description = "High-performance FastAPI integration with msgspec for request/response serialization and automatic OpenAPI schema generation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["fastapi", "msgspec", "serialization", "validation", "openapi", "performance"]
authors = [
    { name = "FastAPI Advanced Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100.0",
    "msgspec>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-watch>=4.2.0",
    "pytest-benchmark>=4.0.0",
    "httpx>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "bump2version>=1.0.0",
    "types-python-dateutil>=2.8.0",
    "locust>=2.20.0",  # Load testing for benchmarks
    "psutil>=5.9.0",  # Performance monitoring
]
build = [
    "cython>=3.0.0,<4.0.0",
    "setuptools>=61.0.0",
    "wheel>=0.40.0",
    "build>=1.0.0",
]
examples = [
    "uvicorn[standard]>=0.20.0",
    "pydantic[email]>=2.0.0",  # For migration example comparison
]

[project.urls]
Homepage = "https://github.com/Harut8/fastapi-advanced"
Documentation = "https://github.com/Harut8/fastapi-advanced/README.MD"
Repository = "https://github.com/Harut8/fastapi-advanced"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastapi_advanced*"]

[tool.setuptools.package-data]
fastapi_advanced = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py
"tests/**/*.py" = ["D"]  # Ignore docstring rules in tests

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# Support for type stubs
files = ["src/fastapi_advanced/**/*.py", "src/fastapi_advanced/**/*.pyi"]

[[tool.mypy.overrides]]
module = "msgspec.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi_advanced._speedups"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "fastapi_advanced._speedups_fallback"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "benchmark: performance benchmark tests",
    "slow: tests that take a long time to run",
]

[tool.coverage.run]
source = ["src/fastapi_advanced"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/fastapi_advanced/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.uv]
dev-dependencies = [
    "bump2version>=1.0.1",
    "setuptools>=80.9.0",
    "uvicorn>=0.38.0",
]
